--- a/Dylan/Localizable.strings
+++ b/Dylan/Localizable.strings
@@ -7,3 +7,8 @@
 */
 
 "search_placeholder" = "Enter your search term";
+"default_author" = "Bob Dylan";
+"results_information_title_first_appearance" = "First appearance";
+"results_information_title_song_author" = "Written by";
+"results_information_title_first_live_performance" = "First live performance";
+
