--- a/Dylan/Localizable.strings
+++ b/Dylan/Localizable.strings
@@ -10,6 +10,7 @@
 "developer_menu_title" = "Developer";
 "developer_menu_button_0" = "Delete all data";
 "developer_menu_button_1" = "Add alternate spelling";
+"developer_menu_button_2" = "Copy logs";
 
 //Misc
 "search_placeholder" = "Enter your search term";
