--- a/Dylan/Localizable.strings
+++ b/Dylan/Localizable.strings
@@ -55,4 +55,9 @@
 "edit_alert_success" = "Successfully edited record";
 "edit_alert_failure" = "Unable to edit record. Received error: %@";
 
+// Errors
+"cloud_kit_query_error_0" = "No corresponding record found to upload";
+"cloud_kit_upload_unknown" = "Unknown error whilst uploading";
+"result_error_get" = "Could not get success from result. Received error: %@";
+
 
