--- a/Dylan/Localizable.strings
+++ b/Dylan/Localizable.strings
@@ -59,5 +59,5 @@
 "cloud_kit_query_error_0" = "No corresponding record found to upload";
 "cloud_kit_upload_unknown" = "Unknown error whilst uploading";
 "result_error_get" = "Could not get success from result. Received error: %@";
-
-
+"lb_editing_error_prefix" = "%@ is missing prefix \"LB-\"";
+"lb_editing_error_nan" = "One or more entries is not a number. Please try again";
