--- a/Dylan/Localizable.strings
+++ b/Dylan/Localizable.strings
@@ -1,6 +1,6 @@
 // Developer
 "developer_menu_title" = "Developer";
-"devloper_menu_bug_report" = "Send bug report...";
+"developer_menu_bug_report" = "Send bug report...";
 
 //Misc
 "product_name" = "Greasy Trail";
@@ -14,6 +14,15 @@
 "generic_ok" = "OK";
 "donate_plea" = "If you find this software useful, please consider supporting its development";
 "donate_thanks" = "%@    You've contributed %@! Thank you so much for your support    %@";
+
+// Delete
+"delete_menu_button" = "Delete all data...";
+"delete_alert_message" = "This will deleteh all data on Greasy Trail";
+"generic_delete" = "Delete";
+"generic_cancel" = "Cancel";
+"generic_ok" = "Ok";
+"delete_confirmation" = "Delete successful. The app will now quit. Please reopen to refetch data";
+"delete_not_allowed" = "Cannot delete whilst an operation is in progress";
 
 // CloudKit
 "cloud_kit_update_success" = "Records updated successfully";
@@ -41,6 +50,8 @@
 "table_column_title_performances_2" = "LB Count";
 "performances_list_empty" = "Not performed yet!";
 "performances_list_title" = "Performances";
+"performance_count_singular" = "Performed once";
+"performance_count" = "Performed %@ times";
 
 // LBs
 "lbs_list_title" = "LB Numbers";
